# Brio-Kernel

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
brio-core/: Cargo.toml  deny.toml
brio-core/components/agents/coder/src/: lib.rs
brio-core/components/agents/council/src/: lib.rs
brio-core/components/agents/reviewer/src/: lib.rs
brio-core/components/supervisor/src/: domain.rs  lib.rs  mesh_client.rs  orchestrator.rs  repository.rs
brio-core/components/supervisor/src/handlers/: coordinating.rs  executing.rs  mod.rs  pending.rs  planning.rs  verifying.rs
brio-core/components/tools/shell-tool/: Cargo.toml
brio-core/components/tools/shell-tool/src/: lib.rs
brio-core/integration-tests/: Cargo.toml
brio-core/integration-tests/tests/: manifesto.rs
brio-core/kernel/: Cargo.toml  build.rs  build_output_proto.txt  build_output_proto_2.txt  build_output_proto_3.txt
brio-core/kernel/src/: host.rs  lib.rs  main.rs  registry.rs
brio-core/kernel/src/engine/: linker.rs  mod.rs  runner.rs
brio-core/kernel/src/inference/: anthropic.rs  openai.rs
brio-core/kernel/src/infrastructure/: audit.rs  config.rs  mod.rs
brio-core/kernel/src/mesh/: events.rs  mod.rs
brio-core/kernel/src/vfs/: diff.rs  hashing.rs  manager.rs  mod.rs  policy.rs  reflink.rs  tests.rs
brio-core/kernel/tests/: manifesto_e2e.rs  openai_mock_tests.rs  proptest_policy.rs  proptest_vfs.rs  vfs_tests.rs
brio-core/wit/: brio.wit  host.wit  mesh.wit  tool.wit
docs/: ARCHITECTURE.md
