[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dev-dependencies]
brio-kernel = { path = "../kernel" }
supervisor = { path = "../components/supervisor" }
tokio = { workspace = true, features = ["full", "test-util"] }
anyhow = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
secrecy = "0.10.3"
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "rustls",
] }
async-trait = "0.1"
